@@ -7,8 +7,7 @@ plugins {
 application {
     mainClass = "dev.shreyaspatil.debroid.MainKt"
     applicationDefaultJvmArgs = listOf(
-        "--enable-native-access=ALL-UNNAMED",
-        "--add-exports=jdk.jdi/com.sun.tools.example.debug.expr=ALL-UNNAMED"
+        "--enable-native-access=ALL-UNNAMED"
     )
 }
 
